[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://gui/main_menu/Menu__008.ogg" type="AudioStream" id=2]
[ext_resource path="res://gui/main_menu/Menu__009.ogg" type="AudioStream" id=3]

[node name="Pause" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 780, -200 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1090.0
margin_bottom = 717.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1090.0
margin_bottom = 717.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 500.0
margin_bottom = 717.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 504.0
margin_right = 586.0
margin_bottom = 717.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 82.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PauseLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 82.0
margin_bottom = 236.0
text = "PAUSE"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 82.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContinueLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 462.0
margin_right = 82.0
margin_bottom = 476.0
size_flags_horizontal = 3
text = "Continue"

[node name="QuitLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 82.0
margin_bottom = 494.0
size_flags_horizontal = 3
text = "Quit"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 82.0
margin_bottom = 717.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 590.0
margin_right = 1090.0
margin_bottom = 717.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuBlockSoundTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MenuSelectBlock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
